k8s/namespaces/base/velero/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    istio-injection: disabled
